# events-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  init-letsencrypt.sh  nginx.conf  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: main.yaml
earlinnapiyamdb@158.160.16/: City.csv  Events.csv
infra/: docker-compose.local.yml  docker-compose.yml  nginx.conf  nginx.local.conf
src/: .coveragerc  pytest.ini
src/api/: filters.py  mixins.py  pagination.py  permissions.py  urls.py
src/api/services/: image_decoder.py
src/applications/: admin.py  helpers.py  models.py  serializers.py  tasks.py  utils.py  utils_db_write.py  views.py
src/applications/migrations/: 0001_initial.py  0002_application_created.py  0003_alter_application_activity.py  0004_alter_application_activity.py
src/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/data/: EventPart.csv  EventType.csv  Events.csv  Speakers.csv  Specialization.csv
src/events/: admin.py  models.py  schemas.py  serializers.py  utils.py  views.py
src/events/management/commands/: load_csv.py
src/events/migrations/: 0001_initial.py  0002_eventpart_description.py  0003_alter_event_event_type_alter_event_specializations.py  0004_alter_event_status.py  0005_alter_event_participant_offline_limit_and_more.py  0006_city_event_city.py  0007_remove_eventpart_is_deleted_alter_event_is_deleted.py  0008_alter_eventpart_presentation_type.py
src/templates/: remind_by_email.html  submit_application.html
src/tests/api_tests/: conftest.py  factories.py
src/tests/api_tests/fixtures/: fixtures_user.py
src/tests/api_tests/test_users/: conftest.py  test_00_auth.py  test_01_users.py
src/users/: admin.py  email.py  managers.py  models.py  serializers.py  utils.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_activity.py
